tests/negative/syntax/import_after_declaration/utils.ci
int util() { return 2; }
